fix code comment bullet points alignment for multiline comment (#473)

--- a/znai-reactjs/src/doc-elements/code-snippets/CircleBadge.css
+++ b/znai-reactjs/src/doc-elements/code-snippets/CircleBadge.css
@@ -1,4 +1,5 @@
 /*
+ * Copyright 2020 znai maintainers
  * Copyright 2019 TWO SIGMA OPEN SOURCE, LLC
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -24,7 +25,7 @@
     color: var(--znai-snippets-bullet-color);
     background-color: var(--znai-snippets-bullet-background-color);
 
-    border-radius: 16px;
+    border-radius: 10px;
     min-height: 20px;
     min-width: 20px;
 
